--- a/.gitignore
+++ b/.gitignore
@@ -352,4 +352,5 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 
-scripts/bindings
+Scripts/Bindings
+Build
