update: project (add AssemblyName)

--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <Platforms>x64</Platforms>
     <RootNamespace>Altseed</RootNamespace>
+    <AssemblyName>Altseed2</AssemblyName>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
