--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -1,18 +1,54 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
     <Platforms>x64</Platforms>
     <RootNamespace>Altseed</RootNamespace>
     <AssemblyName>Altseed2</AssemblyName>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <OutputPath>../Build</OutputPath>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <OutputPath>../Build</OutputPath>
-  </PropertyGroup>
+  <Choose>
+    <When Condition=" '$(OS)' == 'Windows_NT'">
+      <PropertyGroup>
+        <TargetFrameworks>net48;netstandard2.1</TargetFrameworks>
+      </PropertyGroup>
+    </When>
+
+    <When Condition="'$(OS)' == 'Windows'">
+      <PropertyGroup>
+        <TargetFrameworks>net48;netstandard2.1</TargetFrameworks>
+      </PropertyGroup>
+    </When>
+
+    <Otherwise>
+      <PropertyGroup>
+        <TargetFramework>netstandard2.1</TargetFramework>
+      </PropertyGroup>
+    </Otherwise>
+  </Choose>
+  
+  <ItemGroup>
+    <Content Include="..\Core\build\DEBUG\Altseed_Core.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <Choose>
+    <When Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+      <ItemGroup>
+        <Content Include="..\Core\build\DEBUG\Altseed_Core.dll">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </Content>
+      </ItemGroup>
+    </When>
+
+    <When Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+      <ItemGroup>
+        <Content Include="..\Core\build\RELEASE\Altseed_Core.dll">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </Content>
+      </ItemGroup>
+    </When>
+  </Choose>
 
 </Project>
