--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -43,6 +43,23 @@
         </Content>
       </ItemGroup>
     </When>
+
+    <When Condition=" '$(Configuration)'=='Debug' And $([MSBuild]::IsOsPlatform('OSX')) ">
+      <ItemGroup>
+        <Content Include="..\Core\build\DEBUG\libAltseed_Core.dylib">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </Content>
+      </ItemGroup>
+    </When>
+
+    <When Condition=" '$(Configuration)'=='Release' And $([MSBuild]::IsOsPlatform('OSX')) ">
+      <ItemGroup>
+        <Content Include="..\Core\build\RELEASE\libAltseed_Core.dylib">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </Content>
+      </ItemGroup>
+    </When>
+
   </Choose>
 
 </Project>
