--- a/TestSubstitute/TestSubstitute.csproj
+++ b/TestSubstitute/TestSubstitute.csproj
@@ -6,6 +6,7 @@
     <OutputPath>../Build</OutputPath>
     <OutputType>Exe</OutputType>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <Platforms>x64</Platforms>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
