--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -5,6 +5,7 @@
     <RootNamespace>Altseed</RootNamespace>
     <AssemblyName>Altseed2</AssemblyName>
     <OutputPath>../Build</OutputPath>
+    <Platforms>x64</Platforms>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -13,10 +14,12 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
   <Choose>
