add ComponentSystem project

--- a/ComponentSystem/ComponentSystem.csproj
+++ b/ComponentSystem/ComponentSystem.csproj
@@ -1,10 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
-    <RootNamespace>Altseed.Test</RootNamespace>
+    <RootNamespace>Altseed</RootNamespace>
+    <AssemblyName>Altseed.ComponentSystem</AssemblyName>
     <OutputPath>../Build</OutputPath>
     <Platforms>x64</Platforms>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -16,14 +20,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="nunit" Version="3.12.0" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.13.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\ComponentSystem\ComponentSystem.csproj" />
     <ProjectReference Include="..\Engine\Engine.csproj" />
   </ItemGroup>
-
 </Project>
