--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Core"]
 	path = Core
 	url = https://github.com/altseed/altseed2.git
+[submodule "Samples/TestData"]
+	path = Samples/TestData
+	url = https://github.com/altseed/TestData.git
