--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,8 +19,8 @@ jobs:
         build-dir: Core/build
         build-type: Release
         submodule-update: true
-        configure-options: '.. -G "Visual Studio 15 2017" -A x64 -DBUILD_TEST=ON'
-        build-options: '. --config Release'
+        target: Core 
+        configure-options: -G "Visual Studio 15 2017" -A x64
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
