--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,4 +30,4 @@ jobs:
     - name: Build
       run: dotnet build Altseed2.sln --configuration Release --no-restore
     - name: Test
-      run: dotnet test Altseed2.sln --no-restore --verbosity normal
+      run: dotnet test Altseed2.sln --configuration Release --no-restore --verbosity normal
