--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
         cache-name: cache-core
       with:
         path: Core/build
-        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('Core/**') }}
+        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('Core/core/**') }}
     - name: Build CMake
       if: steps.cache.outputs.cache-hit != 'true'
       run: |
