--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,13 +18,14 @@ jobs:
         git submodule update --init --recursive
     - name: Cache Core
       uses: actions/cache@v1
+      id: cache-core
       env:
         cache-name: cache-core
       with:
         path: Core/build
         key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('Core/core/**') }}
     - name: Build CMake
-      if: steps.cache.outputs.cache-hit != 'true'
+      if: steps.cache-core.outputs.cache-hit != 'true'
       run: |
         cd Core
         mkdir build
