--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,7 +72,7 @@ jobs:
         cd Core
         mkdir build
         cd build
-        cmake .. -A x64
+        cmake ..
         cmake --build . --config Release
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
@@ -114,7 +114,7 @@ jobs:
         cd Core
         mkdir build
         cd build
-        cmake .. -A x64
+        cmake .. -G "Xcode" 
         cmake --build . --config Release
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
