--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,7 @@ jobs:
       uses: actions/upload-artifact@v1.0.0
       with:
         name: test-windows
-        path: Build\netcoreapp3.0\log.txt
+        path: Build/netcoreapp3.0/log.txt
   
   linux:
 
@@ -69,6 +69,10 @@ jobs:
     - name: Build CMake
       if: steps.cache-core.outputs.cache-hit != 'true'
       run: |
+        sudo apt -y install libx11-dev libxrandr-dev libxi-dev libxinerama-dev libxcursor-dev libudev-dev
+        sudo apt -y install libssl-dev
+        sudo apt -y install libglu1-mesa-dev mesa-common-dev
+        sudo apt -y install libpulse-dev
         cd Core
         mkdir build
         cd build
@@ -89,7 +93,7 @@ jobs:
       uses: actions/upload-artifact@v1.0.0
       with:
         name: test-linux
-        path: Build\netcoreapp3.0\log.txt
+        path: Build/netcoreapp3.0/log.txt
         
   macOS:
 
@@ -131,5 +135,5 @@ jobs:
       uses: actions/upload-artifact@v1.0.0
       with:
         name: test-mac
-        path: Build\netcoreapp3.0\log.txt
+        path: Build/netcoreapp3.0/log.txt
   
