--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,9 +70,10 @@ jobs:
     - name: Build CMake
       if: steps.cache-core.outputs.cache-hit != 'true'
       run: |
-        sudo apt-add-repository ppa:canonical-x/vulkan
+        wget -qO - http://packages.lunarg.com/lunarg-signing-key-pub.asc | sudo apt-key add -
+        sudo wget -qO /etc/apt/sources.list.d/lunarg-vulkan-1.2.135-bionic.list http://packages.lunarg.com/vulkan/1.2.135/lunarg-vulkan-1.2.135-bionic.list
         sudo apt update
-        sudo apt install vulkan-utils mesa-vulkan-drivers
+        sudo apt install vulkan-sdk
         sudo apt -y install libx11-dev libxrandr-dev libxi-dev libxinerama-dev libxcursor-dev libudev-dev
         sudo apt -y install libssl-dev
         sudo apt -y install libglu1-mesa-dev mesa-common-dev
