--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: .NET Core
+name: Altseed
 
 on:
   push:
@@ -48,7 +48,7 @@ jobs:
       uses: actions/upload-artifact@v1.0.0
       with:
         name: test-windows
-        path: Build/netcoreapp3.0/log.txt
+        path: Build/netcoreapp3.0
   
   linux:
 
@@ -99,7 +99,7 @@ jobs:
       uses: actions/upload-artifact@v1.0.0
       with:
         name: test-linux
-        path: Build/netcoreapp3.0/log.txt
+        path: Build/netcoreapp3.0
         
   macOS:
 
