--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,6 +78,7 @@ jobs:
         sudo apt -y install libssl-dev
         sudo apt -y install libglu1-mesa-dev mesa-common-dev
         sudo apt -y install libpulse-dev
+        sudo apt -y install libgtk-3-dev
         cd Core
         mkdir build
         cd build
