--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -207,14 +207,9 @@ jobs:
       - name: Make Nuget Package
         run: |
           wget https://dist.nuget.org/win-x86-commandline/latest/nuget.exe -O nuget.exe
-          mkdir -p package/lib/netstandard2.1
-          mkdir -p package/build/netstandard2.1
-          mv Nuget/Altseed2.nuspec package/
-          mv bin/Altseed2.dll package/lib/netstandard2.1/
-          mv Nuget/Altseed2.targets package/build/netstandard2.1/
-          mv bin/Altseed_Core.dll package/build/netstandard2.1/
-          mv bin/libAltseed_Core.dylib package/build/netstandard2.1/
-          mv bin/libAltseed_Core package/build/netstandard2.1/
+          mkdir package/
+          mv Nuget/* package/
+          mv bin/* package/
           cd package
           ..\nuget.exe pack Altseed2.nuspec
         shell: powershell
