--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -218,4 +218,4 @@ jobs:
         uses: actions/upload-artifact@v1
         with:
           name: nuget
-          path: package/*.nupkg
+          path: package/**.nupkg
