--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -208,14 +208,15 @@ jobs:
         run: |
           wget https://dist.nuget.org/win-x86-commandline/latest/nuget.exe -O nuget.exe
           mkdir package/
+          mkdir result/
           mv Nuget/* package/
           mv bin/* package/
           cd package
-          ..\nuget.exe pack Altseed2.nuspec
+          ..\nuget.exe pack Altseed2.nuspec -OutputDirectory ../result
         shell: powershell
         
       - name: Upload artifact
         uses: actions/upload-artifact@v1
         with:
           name: nuget
-          path: package/**.nupkg
+          path: result
