--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -5,6 +5,7 @@
     <RootNamespace>Altseed.Test</RootNamespace>
     <OutputPath>../Build</OutputPath>
     <Platforms>x64</Platforms>
+    <Configurations>Debug;Release;CI</Configurations>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -13,6 +14,11 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <PlatformTarget>x64</PlatformTarget>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='CI|x64'">
+    <PlatformTarget>x64</PlatformTarget>
+    <DefineConstants>TRACE;CI</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
