--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,11 +42,13 @@ jobs:
         dotnet restore Tool/FontGenerator/FontGenerator.csproj
     - name: Build
       run: |
-        dotnet build TestForMacLinux/TestForMacLinux.csproj --configuration Release --no-restore
+        dotnet build TestForMacLinux/TestForMacLinux.csproj --configuration CI --no-restore
         dotnet build Tool/FontGenerator/FontGenerator.csproj --configuration Release --no-restore
     - name: Test
       continue-on-error: true
-      run: dotnet test Altseed2.sln --configuration Release --no-restore --verbosity normal
+      run: |
+        cd Build/netcoreapp3.0
+        dotnet TestForMacLinux.dll
     - name: Upload artifact
       continue-on-error: true
       uses: actions/upload-artifact@v1.0.0
@@ -98,7 +100,7 @@ jobs:
         dotnet restore Tool/FontGenerator/FontGenerator.csproj
     - name: Build
       run: |
-        dotnet build TestForMacLinux/TestForMacLinux.csproj --configuration Release --no-restore
+        dotnet build TestForMacLinux/TestForMacLinux.csproj --configuration CI --no-restore
         dotnet build Tool/FontGenerator/FontGenerator.csproj --configuration Release --no-restore
     - name: Test
       continue-on-error: true
@@ -148,7 +150,7 @@ jobs:
         dotnet restore Tool/FontGenerator/FontGenerator.csproj
     - name: Build
       run: |
-        dotnet build TestForMacLinux/TestForMacLinux.csproj --configuration Release --no-restore
+        dotnet build TestForMacLinux/TestForMacLinux.csproj --configuration CI --no-restore
         dotnet build Tool/FontGenerator/FontGenerator.csproj --configuration Release --no-restore
     - name: Test
       continue-on-error: true
