--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
       continue-on-error: true
       run: |
         cd Build/netcoreapp3.0
-        cp netstandard2.1/Altseed_Core.dll .
+        cp ../netstandard2.1/Altseed_Core.dll .
         dotnet TestForMacLinux.dll
     - name: Upload artifact
       continue-on-error: true
@@ -109,7 +109,7 @@ jobs:
       continue-on-error: true
       run: |
         cd Build/netcoreapp3.0
-        cp netstandard2.1/Altseed_Core.so .
+        cp ../netstandard2.1/Altseed_Core.so .
         mv libAltseed_Core.so libAltseed_Core
         dotnet TestForMacLinux.dll
     - name: Upload artifact
@@ -161,7 +161,7 @@ jobs:
       continue-on-error: true
       run: |
         cd Build/netcoreapp3.0
-        cp netstandard2.1/Altseed_Core.dylib .
+        cp ../netstandard2.1/Altseed_Core.dylib .
         dotnet TestForMacLinux.dll
     - name: Upload artifact
       continue-on-error: true
