--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,15 +41,11 @@ jobs:
         dotnet restore TestForMacLinux/TestForMacLinux.csproj
         dotnet restore Tool/FontGenerator/FontGenerator.csproj
     - name: Build
-      run: |
-        dotnet build Engine/Engine.csproj --configuration Release --no-restore
-        dotnet build Tool/FontGenerator/FontGenerator.csproj --configuration Release --no-restore
-        dotnet build TestForMacLinux/TestForMacLinux.csproj --configuration CI --no-restore
+      run: dotnet build Altseed2.sln --configuration CI --no-restore
     - name: Test
       continue-on-error: true
       run: |
         cd Build/netcoreapp3.0
-        cp ../netstandard2.1/Altseed_Core.dll .
         dotnet TestForMacLinux.dll
     - name: Upload artifact
       continue-on-error: true
@@ -101,15 +97,11 @@ jobs:
         dotnet restore TestForMacLinux/TestForMacLinux.csproj
         dotnet restore Tool/FontGenerator/FontGenerator.csproj
     - name: Build
-      run: |
-        dotnet build Engine/Engine.csproj --configuration Release --no-restore
-        dotnet build Tool/FontGenerator/FontGenerator.csproj --configuration Release --no-restore
-        dotnet build TestForMacLinux/TestForMacLinux.csproj --configuration CI --no-restore
+      run: dotnet build Altseed2.sln --configuration CI --no-restore
     - name: Test
       continue-on-error: true
       run: |
         cd Build/netcoreapp3.0
-        cp ../netstandard2.1/Altseed_Core.so .
         mv libAltseed_Core.so libAltseed_Core
         dotnet TestForMacLinux.dll
     - name: Upload artifact
@@ -153,15 +145,11 @@ jobs:
         dotnet restore TestForMacLinux/TestForMacLinux.csproj
         dotnet restore Tool/FontGenerator/FontGenerator.csproj
     - name: Build
-      run: |
-        dotnet build Engine/Engine.csproj --configuration Release --no-restore
-        dotnet build Tool/FontGenerator/FontGenerator.csproj --configuration Release --no-restore
-        dotnet build TestForMacLinux/TestForMacLinux.csproj --configuration CI --no-restore
+      run: dotnet build Altseed2.sln --configuration CI --no-restore
     - name: Test
       continue-on-error: true
       run: |
         cd Build/netcoreapp3.0
-        cp ../netstandard2.1/Altseed_Core.dylib .
         dotnet TestForMacLinux.dll
     - name: Upload artifact
       continue-on-error: true
