--- a/Engine/Engine.csproj
+++ b/Engine/Engine.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <RootNamespace>Altseed</RootNamespace>
+    <RootNamespace>Altseed2</RootNamespace>
     <AssemblyName>Altseed2</AssemblyName>
     <OutputPath>../Build</OutputPath>
     <Platforms>x64</Platforms>
